[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Textures/NPCs/bird1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/NPCs/bird3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Textures/NPCs/bird4.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/NPCs/bird2.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Entities/AmbientEnts/bird.gd" type="Script" id=5]
[ext_resource path="res://Sounds/bird_flutter.ogg" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SphereShape" id=2]
radius = 10.0

[sub_resource type="BoxShape" id=3]

[node name="bird" type="KinematicBody" groups=["bird"]]
script = ExtResource( 5 )
dead_actor = true

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.397, 0 )
billboard = 1
shaded = true
frames = SubResource( 1 )

[node name="hop_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.15

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
unit_size = 2.5
max_distance = 30.0
attenuation_filter_cutoff_hz = 10000.0

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )
disabled = true

[connection signal="timeout" from="hop_timer" to="." method="_on_hop_timer_timeout"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
